# quick-replace-web

./: .gitignore  Cargo.toml  Procfile  README.md
src/: lib.rs  main.rs  user.rs  utils.rs
static/: index.html
