[package]
name = "warp_sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
quick-replace = "0.1.1"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
warp = {version = "0.3.4", features = ["websocket"] }
